style.css
/*======================================
Theme Name: Smartline Lite
Theme URI: https://themezee.com/themes/smartline/
Description: Smartline Lite is a perfect theme for news and magazine websites as well as simple blogs. The responsive design with bold colors and smart lines looks great on any device. The main highlight of Smartline is the flexible and widgetized front page template which allows you to create a magazine-styled homepage with ease.
Version: 1.3.9
Author: ThemeZee
Author URI: https://themezee.com
Tags: two-columns, light, blue, custom-background, custom-colors, custom-header, custom-menu, editor-style, blog, news, featured-image-header, featured-images, flexible-header, full-width-template, sticky-post, threaded-comments, translation-ready, theme-options, fluid-layout, responsive-layout, one-column, left-sidebar, right-sidebar, three-columns, black, silver, white, gray
Text Domain: smartline-lite
License: GNU General Public License v2.0
License URI: http://www.gnu.org/licenses/gpl-2.0.html
======================================*/


/* CSS Reset | http://meyerweb.com/eric/tools/css/reset/ | v2.0
-------------------------------------------------------------- */
html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li,
fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary, time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* General Styles
-------------------------------------------------------------- */
html {
	font-size: 100.01%;
}
body {
	font-family: 'Raleway', Arial, Tahoma;
	font-size: 0.95em;
	border: 0;
	color: #111;
	background-color: #e5e5e5;
}

/* Links */
a, a:link, a:visited{
	color: #004488;
	text-decoration: none;
}
a:hover, a:active {
	text-decoration: underline;
}

/* Form Elements */
input, textarea {
	padding: 0.7em;
	background: #fff;
	border: 1px solid #ddd;
	font-size: 1.0em;
	color: #333;
	font-family: 'Raleway', Arial, Tahoma;
}
input[type="submit"] {
	border: none;
	color: #333;
	background-color: #eee;
}
input[type="submit"]:hover {
	background-color: #ddd;
	cursor: pointer;
}

/* Clearing Floats */
.clearfix:before, .clearfix:after {
	content: " ";
	display: table;
}
.clearfix:after {
	clear: both;
}
.clearfix {
    *zoom: 1; /* For IE 6/7 only */
}

/* Make Form Elements responsive */
input, textarea, select {
	max-width: 100%;
}

/* Text meant only for screen readers. */
.screen-reader-text {
	clip: rect(1px, 1px, 1px, 1px);
	position: absolute !important;
	height: 1px;
	width: 1px;
	overflow: hidden;
}

.screen-reader-text:focus {
	background-color: #f1f1f1;
	border-radius: 3px;
	box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
	clip: auto !important;
	color: #21759b;
	display: block;
	font-size: 14px;
	font-size: 0.875rem;
	font-weight: bold;
	height: auto;
	left: 5px;
	line-height: normal;
	padding: 15px 23px 14px;
	text-decoration: none;
	top: 5px;
	width: auto;
	z-index: 100000; /* Above WP toolbar. */
}

/* Basic Structure
-------------------------------------------------------------- */
#wrapper {
	max-width: 1340px;
	width: 92%;
	margin: 2em auto;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	background: #fff;
}
#header-wrap {
	border-top: 4px solid #004488;
}
#header {
	padding: 2.5em;
	background: #fff;
}
#wrap {
	clear: both;
	padding: 0;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}
#content {
	float: left;
	width: 70%;
	padding: 2em 2em 0;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}
#sidebar {
	margin-left: 70%;
	width: 30%;
	padding: 1em;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	background: #f3f3f3;
	background: -moz-linear-gradient(left, #e6e6e6 0%, #f3f3f3 100%); /* FF3.6+ */
	background: -webkit-gradient(linear, left top, right top, color-stop(0%,#e6e6e6), color-stop(100%,#f3f3f3)); /* Chrome,Safari4+ */
	background: -webkit-linear-gradient(left, #e6e6e6 0%,#f3f3f3 100%); /* Chrome10+,Safari5.1+ */
	background: -o-linear-gradient(left, #e6e6e6 0%,#f3f3f3 100%); /* Opera 11.10+ */
	background: -ms-linear-gradient(left, #e6e6e6 0%,#f3f3f3 100%); /* IE10+ */
	background: linear-gradient(to right, #e6e6e6 0%,#f3f3f3 100%); /* W3C */
}
#content-full {
	padding: 2em 2em 0;
}

/* Header
-------------------------------------------------------------- */
#logo {
	float: left;
	max-width: 100%;
}
#logo .site-title {
	display: inline-block;
	font-size: 2.5em;
	font-weight: bold;
	color: #004488;
	font-family: 'Bitter', Georgia, Arial, Tahoma;
}
#logo .site-title a:link,
#logo .site-title a:visited {
	color: #004488;
}
#logo .site-title a:hover,
#logo .site-title a:active {
	color: #333;
	text-decoration: none;
}
#logo .site-description {
	float: right;
	margin: 0.4em 0 0 2em;
	line-height: 1.4em;
	font-size: 1.3em;
	color: #444;
}
#logo .custom-logo {
	margin: 0 1.5em 0 0;
	padding: 0;
	border: none;
	vertical-align: top;
	max-width: 100%;
	height: auto;
}

/* Header Content */
#header-content {
	display: inline;
	padding: 0;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}
/* ... */

